--- a/package.json
+++ b/package.json
@@ -68,16 +68,16 @@
         "fish"
       ]
     },
-    "icon": "build/favicon_256.ico",
+    "icon": "build/favicon.ico",
     "win": {
       "target": "nsis",
-      "icon": "build/favicon_256.ico"
+      "icon": "build/favicon.ico"
     },
     "mac": {
-      "icon": "build/icon.icns"
+      "icon": "build/favicon.icns"
     },
     "linux": {
-      "icon": "build/icons"
+      "icon": "build/favicon.png"
     }
   },
   "scripts": {
@@ -109,9 +109,11 @@
     "@babel/preset-react": "^7.23.3",
     "archiver": "^7.0.1",
     "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
     "electron": "^28.0.0",
     "electron-builder": "^23.6.0",
     "electron-devtools-installer": "^3.2.0",
+    "eslint-plugin-react": "^7.37.3",
     "react-test-renderer": "^18.2.0",
     "wait-on": "^7.2.0"
   }
