--- a/src/.env
+++ b/src/.env
@@ -6,3 +6,4 @@ REACT_APP_NAME=$npm_package_name
 
 # Configurable Information
 REACT_APP_DISPLAY_NAME=Idler Game
+REACT_APP_VERSION=$npm_package_version
