--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ REACT_APP_PUBLISHER_NAME=Lake Country Games
 REACT_APP_GAME_CURRENCY=Currency
 REACT_APP_GAME_PRICE=Price
 REACT_APP_GOOGLE_FONTS_URL=https://fonts.googleapis.com/css2?family=FontName:wght@400;600;800&display=swap 
+REACT_APP_VERSION=$npm_package_version
